--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -2,7 +2,7 @@ footer {
     background-color: white;
     height: 60px; 
     width: 100%; 
-    position: absolute; 
+    position: relative; 
     text-align: center; 
     bottom: 0; 
     /* padding-top: 25px;  */
