--- a/web_static/styles/2-common.css
+++ b/web_static/styles/2-common.css
@@ -1,5 +1,10 @@
+/*
+ * === Global style ===
+ */
+
+/* Body style */
 body {
-    margin:0px; 
-    padding:0px;
-}
+    margin: 0;
+    padding: 0;
+  }
 
