--- a/web_static/styles/2-header.css
+++ b/web_static/styles/2-header.css
@@ -1,5 +1,11 @@
+/*
+ * === Header style ===
+ */
+
+/* Header style */
 header {
-    background-color: #FF0000; 
-    height: 70px; 
+    background-color: #f00;
+    height: 70px;
     width: 100%;
-}
+  }
+
