--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,25 +1,30 @@
+/*
+ * === Filters class style ===
+ */
+
+/* Filters style */
 .filters {
     background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
     height: 70px;
     width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    position: relative;
-}
-.filters button {
-    height: 48px;
-    font-size: 18px;
-    background-color: #FF5A5F;
-    position: relative;
-    right: 0px;
-    width: 20%;
-    color: #FFFFFF;
+  }
+  
+  /* Search button style */
+  .filters button {
+    background: #ff5a5f;
     border: none;
-    top: 11px;
-    left: calc(100% - (20% + 30px));
     border-radius: 4px;
-}
-
-.filters button:hover {
-    opacity: .9;
-}
+    color: #fff;
+    float: right;
+    font-size: 18px;
+    height: 48px;
+    margin: 12px 30px;
+    width: 20%;
+  }
+  
+  /* Search button hover opacity */
+  .filters button:hover {
+    background-color: rgba(255, 90, 95, .9);
+  }
