--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,44 +1,72 @@
+/*
+ * === Filters class style ===
+ */
+
+/* Filters style */
 .filters {
     background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
     height: 70px;
     width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    position: relative;
-}
-.filters button {
-    height: 48px;
-    font-size: 18px;
-    background-color: #FF5A5F;
-    position: absolute;
-    right: 0px;
-    width: 20%;
-    color: #FFFFFF;
+  }
+  
+  /* Search button style */
+  .filters button {
+    background: #ff5a5f;
     border: none;
-    top: 11px;
-    right: 30px;
     border-radius: 4px;
-}
-
-.filters button:hover {
-    opacity: .9;
-}
-
-.locations, .amenities {
+    color: #fff;
+    float: right;
+    font-size: 18px;
+    height: 48px;
+    margin: 12px 30px;
+    width: 20%;
+  }
+  
+  /* Search button hover opacity */
+  .filters button:hover {
+    background-color: rgba(255, 90, 95, .9);
+  }
+  
+  /* Locations and amenities style */
+  .locations,
+  .amenities {
+    display: inline-block;
     height: 100%;
     width: 25%;
-    display: inline-block;
-}
-
-.locations {
-    border-right: 2px solid #DDDDDD;
-}
-
-.locations h3, .amenities h3 {
+  }
+  
+  /* Locations border */
+  .locations {
+    border-right: 1px solid #ddd;
+  }
+  
+  /*
+   * --- Places header style ---
+   */
+  
+  /* Header box sizing */
+  .filters h2,
+  .filters h3,
+  .filters h4 {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  
+  /* Header 3 style */
+  .filters h3 {
+    font-size: 1.17em;
     font-weight: 600;
-}
-
-.locations h4, .amenities h4 {
+    height: 50%;
+    padding: 15.5px 0 0 30px;
+  }
+  
+  /* Header 4 style */
+  .filters h4 {
     font-size: 14px;
     font-weight: 400;
-}
+    height: 50%;
+    padding: 4.5px 0 12px 30px;
+  }
